测试引入组件

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
             "core\\": "core/",
             "web\\": "web/"
         }
+    },
+    "require": {
+        "gregwar/captcha": "dev-master"
     }
 }
